# robotsix-agent-comm

./: .coverage  .dockerignore  .env.broker.example  .env.example  .env.lifecycle.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  codecov.yml  coverage.xml  docker-compose.yml  index.html  mkdocs.yml  modules.yaml  objects.inv  pyproject.toml  run_checks.sh  scratch_check.py  scratch_integration.py  scratch_mypy.py  scratch_ruff.py  scratch_run_tests.py  scratch_unit.py  vulture_whitelist.py
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  deps-bump.yml  docker-publish.yml  docs.yml  publish.yml
.local-packages/trustme-1.2.1.dist-info/: RECORD
.robotsix-mill/periodic/: bc_check.yaml  completeness_check.yaml  copy_paste.yaml  env_doc_sync.yaml  state_sync.yaml
api/: index.html
broker/deployment/: index.html
changelog.d/: 20260625T210000Z-dashboard-dark-mode.feature.md  20260625T214500Z-dashboard-traffic-click-detail.feature.md
decisions/0001-stdlib-first/: index.html
decisions/0002-transport-architecture/: index.html
decisions/0003-addressing-and-routing/: index.html
decisions/0004-delivery-semantics/: index.html
decisions/0005-http-json-transport/: index.html
decisions/0006-broker-server-architecture/: index.html
design/: index.html
docs/: index.md  modules.yaml
docs/api/: index.md
docs/broker/: deployment.md
docs/decisions/: 0001-stdlib-first.md  0002-transport-architecture.md  0003-addressing-and-routing.md  0004-delivery-semantics.md  0005-http-json-transport.md  0006-broker-server-architecture.md
docs/deployment/: index.md
docs/design/: index.md
docs/lifecycle/: index.md
docs/publishing/: checklist.md  index.md  maintenance.md  releasing.md
docs/sdk/: tutorial.md
docs/transport/: design.md
docs/tutorials/: index.md
examples/: README.md  error_handling.py  notification_listener.py  request_response.py
lifecycle/: index.html
publishing/: index.html
publishing/checklist/: index.html
publishing/maintenance/: index.html
publishing/releasing/: index.html
sdk/tutorial/: index.html
search/: search_index.json
src/robotsix_agent_comm/: __init__.py  _logging.py  config.py  errors.py  service_utils.py
src/robotsix_agent_comm/broker/: __init__.py  __main__.py  _audit.py  _dashboard.py  _rate_limit.py  config.py  server.py  service.py
src/robotsix_agent_comm/chat/: __init__.py  server.py
src/robotsix_agent_comm/lifecycle/: __init__.py  __main__.py  backend.py  config.py  server.py  service.py  store.py  supervision.py  tracing.py
src/robotsix_agent_comm/llm/: agent.py
src/robotsix_agent_comm/protocol/: __init__.py  _config_helpers.py  _types.py  config_contract.py  messages.py  serialization.py  validation.py
src/robotsix_agent_comm/sdk/: __init__.py  agent.py  brokered.py  brokered_request.py  discovery.py  reply.py  responder.py
src/robotsix_agent_comm/transport/: __init__.py  _http.py  base.py  brokered.py  client.py  endpoints.py  errors.py  registry.py  retry.py  router.py  server.py
templates/python-package/: .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
templates/python-package/.github/workflows/: audit.yml  ci.yml  publish.yml
templates/python-package/src/package_name/: __init__.py
templates/python-package/tests/: test_placeholder.py
tests/: conftest.py  helpers.py  test_config.py  test_end_to_end.py  test_logging_setup.py  test_smoke.py
tests/broker/: conftest.py  test_audit.py  test_auto_register.py  test_broker_integration.py  test_brokered_integration.py  test_config.py  test_dashboard.py  test_pull_mailbox.py  test_rate_limit.py  test_server.py  test_service.py  test_traffic.py
tests/chat/: test_server.py
tests/lifecycle/: __init__.py  conftest.py  test_backend.py  test_broker_registration.py  test_config.py  test_deploy.py  test_server.py  test_service.py  test_supervision.py  test_tracing.py
tests/llm/: test_agent.py
tests/protocol/: __init__.py  test_config_contract.py  test_messages.py  test_serialization.py  test_validation.py
tests/sdk/: test_agent.py  test_brokered_agent.py  test_brokered_request.py  test_discovery.py  test_reply.py  test_responder.py
tests/transport/: test_brokered.py  test_client.py  test_registry.py  test_retry.py  test_router.py  test_server.py  test_server_client.py
transport/design/: index.html
