[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-agent-comm"
version = "0.1.0"
description = "Agent communication system for the robotsix ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Damien Robotsix", email = "damien.robotsix@gmail.com" }]
dependencies = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-agent-comm"
Repository = "https://github.com/damien-robotsix/robotsix-agent-comm"
Documentation = "https://damien-robotsix.github.io/robotsix-agent-comm"
Issues = "https://github.com/damien-robotsix/robotsix-agent-comm/issues"
Changelog = "https://github.com/damien-robotsix/robotsix-agent-comm/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "vulture",
    "trustme",
    "mdformat-mkdocs",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
robotsix-broker = "robotsix_agent_comm.broker.service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_agent_comm"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "D"]

[tool.ruff.lint.per-file-ignores]
"vulture_whitelist.py" = ["B018", "F821", "D10"]
"tests/**" = ["S101", "S104", "S105", "S106", "S108", "D10", "D205", "D403", "D415"]
"src/robotsix_agent_comm/broker/config.py" = ["S104"]
"src/robotsix_agent_comm/broker/server.py" = ["S101", "D107"]
"src/robotsix_agent_comm/broker/_dashboard.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["^templates/", "^vulture_whitelist\\.py$"]

[tool.deptry]
# The package's own modules are first-party — the example scripts under
# examples/ import robotsix_agent_comm, which deptry otherwise reports as a
# transitive dependency (DEP003).
known_first_party = ["robotsix_agent_comm"]
# templates/ is scaffold content for OTHER packages (placeholder package_name
# imports), not part of this repo's dependency graph — exclude it from deptry
# as it already is from ruff.
extend_exclude = ["templates"]

[tool.pytest.ini_options]
strict = true
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["robotsix_agent_comm"]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.mdformat]
exclude = ["^\\.pytest_cache/", "^templates/"]
